# anonymize-ddp

./: .gitignore  CITATION.cff  CITATION.md  ReadMe.md  citation.cff  log_anonym_insta.txt  requirements.txt  test.json
anonymize-ddp/: pyproject.toml
anonymize-ddp/anonymize/: anonymizing_instagram_uu.py  blur_images.py  blur_videos.py  parse_json.py
anonymize-ddp/evaluation/: validation_execution.py  validation_packagebased.py
anonymize-ddp/tests/: test_validation.py
anonymize-ddp/validation/: validation_execution.py
data/: .gitignore
data/test_data/: labeled.json
data/test_data/keys/: keys_d41c3cf84883cbdaa5a41df28c58a903_20201105.csv
data/test_data/processed/d41c3cf84883cbdaa5a41df28c58a903_20201105/: comments.json  connections.json  likes.json  media.json  messages.json  profile.json  saved.json  searches.json  seen_content.json  stories_activities.json
scratch/: evaluate_anonymization.ipynb
src/: anonymizing_instagram_uu.py  blur_images.py  log_anonym_insta.txt  parse_json.py  validation_script.py
src/evaluation/: Readme.md  import_files.py  merge_inputfiles.py  test_validation.py  validation_execution.py  validation_packagebased.py  validation_script.py
src/evaluation/test_data/: result_horses.json
src/evaluation/test_data/keys/: keys_proefpersoon4_20201020.csv
src/evaluation/test_data/processed/proefpersoon4_20201020/: comments.json  connections.json  likes.json  media.json  messages.json  profile.json  searches.json  seen_content.json  shopping.json  stories_activities.json
