[tool.poetry]
name = "anonymize-ddp"
version = "1.0.2"
description = "Pseudonimizing software for data download packages"
authors = ["Roos Voorvaart, Martine de Vos, Laura Boeschoten, Ruben van de Goorbergh, Casper Kaandorp"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
