[tool.poetry]
name = "anonymize-ddp"
version = "1.0.2"
description = "Pseudonimizing software for data download packages"
authors = ["Roos Voorvaart, Martine de Vos, Laura Boeschoten, Ruben van de Goorbergh, Casper Kaandorp"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
anonymoUUs = "0.0.8"
pandas = "^1.3.2"
pathlib = "^1.0.1"
imutils = "^0.5.4"
python-dateutil = "^2.8.2"
zipp = "^3.5.0"
progressbar2 = "^3.53.1"
scikit-learn = "^0.24.2"
torchvision = "^0.10.0"
facenet-pytorch = "^2.5.2"
opencv-python = "^4.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
